lib name correction in build config

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ link_libraries (
 )
 
 add_library( graphics graphics.cpp )
-add_library(widgets widgets.cpp)
+add_library(widget widget.cpp)
 add_library(num_set num_set.cpp)
 add_library(num_select num_select.cpp)
 add_executable( test_graphics main.cpp )
