--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,11 +12,9 @@ link_libraries (
 
 add_library( graphics graphics.cpp )
 add_library(widget widget.cpp)
-add_library(num_set num_set.cpp)
-add_library(num_select num_select.cpp)
 add_library(field field.cpp)
 add_executable( test_graphics main.cpp )
 
 
 
-target_link_libraries( test_graphics graphics num_set num_select field widget)
+target_link_libraries( test_graphics graphics field widget)
